Prevents animated alert from overflowing header

--- a/mydonedone.css
+++ b/mydonedone.css
@@ -125,6 +125,11 @@
     padding-top: 5px;
 }
 
+.issue-alert-animated {
+    height: 100%;
+    padding: 5px 30px 0 30px;
+}
+
 .issue-back {
     height: auto;
     width: 30px;
